fixed code smells
git-svn-id: file:///home/mast/dev/jgap/svn/trunk@1589 3924feb9-9058-4ba4-b128-58a6af0bd8c6